[metadata]
name = dalec-nextcloud
version = attr: dalec_nextcloud.__version__
url = https://github.com/webu/dalec-nextcloud
author = Webu
author_email = contact@webu.coop
description = Dalec plugin to retrieve nextcloud data
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source = https://github.com/webu/dalec-nextcloud
    Tracker = https://github.com/webu/dalec-nextcloud/issues

[options]
python_requires = >=3.7
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    Django>=2.2
    dalec
    nextcloud-api-wrapper
